<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishActivity"
    android:background="@drawable/background_main">

    <ImageView
        android:id="@+id/imv"
        android:layout_width="270dp"
        android:layout_height="123dp"
        android:layout_marginBottom="300dp"
        android:src="@drawable/stars"
        android:contentDescription="@string/stars_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438" />

    <TextView
        android:id="@+id/tv_finish2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="30dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_finish3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/minutes_and"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_finish2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_finish6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_finish5"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_finish5"
        android:layout_width="54dp"
        android:layout_height="17dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:text="@string/seconds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_finish"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="100dp"
        android:id="@+id/tv_finish4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_finish"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="150dp"
        android:text="@string/you_rate_us_with"
/>
    <TextView
        android:layout_marginTop="250dp"
        android:id="@+id/tv_finish7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_finish"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="150dp"
        android:text="@string/stars"
        />
    <TextView
        android:layout_marginTop="170dp"
        android:id="@+id/tv_finish8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_finish"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="150dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>