<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/background_main">

    <TextView
        android:id="@+id/profile_tv_gender2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/rate_this_app"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_goneMarginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_profile_gender" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_til_adress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_spinner">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_tiet_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adress"
            android:inputType="text"
            android:textSize="18dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/rg_profile_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_tv_gender"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rb_profile_gender_notSelected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/not_selected"
            android:textColor="#FFFFFF"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/rb_profile_gender_male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_male"
            android:textColor="#FFFFFF"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/rb_profile_gender_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/profile_female"

            android:textColor="#FFFFFF"
            android:gravity="center"/>
    </RadioGroup>

    <TextView
        android:id="@+id/profile_tv_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="18dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/profile_gender"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_til_adress"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/profile_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_tv_country"
        ></Spinner>


    <TextView
        android:id="@+id/profile_tv_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_country"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="18dp"/>


    <Button
        android:id="@+id/profile_btnSave"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/btn2"
        android:text="@string/registerButton"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@+id/rg_profile_gender"
        android:layout_marginLeft="25dp" />

    <Button
        android:id="@+id/profile_btnFinish"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/btn2"
        android:text="@string/finish"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_profile_gender"
        android:layout_marginRight="25dp" />

    <RatingBar
        android:id="@+id/profile_rbRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_tv_gender2" />


</androidx.constraintlayout.widget.ConstraintLayout>