<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/background_main">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_til_FirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="27dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:textColorHint="#FFFFFF"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_tiet_FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nume"
            android:textColorHint="#FFFFFF"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_til_LastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/register_til_FirstName"
        android:layout_marginTop="16dp"
        android:textColorHint="#FFFFFF"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_tiet_LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenume"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_til_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/register_til_LastName"
        android:layout_marginTop="16dp"
        android:textColorHint="#FFFFFF"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_tiet_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_username"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/register_tbPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberPassword"
        android:hint="@string/register_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/register_til_Username"
        android:layout_marginTop="16dp"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>

    <DatePicker
        android:id="@+id/register_birthday"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:outlineSpotShadowColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="17dp"

        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"

        android:text="@string/data_nasterii"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_tbPassword"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/register_btnSave"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/registerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_birthday"
        android:background="@drawable/btn2"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>


</androidx.constraintlayout.widget.ConstraintLayout>